First meditation app. I have create main layout and added buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -193,7 +193,7 @@
         android:layout_width="59dp"
         android:layout_height="46dp"
         android:layout_marginBottom="24dp"
-        android:background="@android:color/transparent"
+        android:background="#3C3F41"
         android:scaleType="centerCrop"
         android:tint="#5AB1F6"
         app:layout_constraintBottom_toBottomOf="parent"
