First meditation app. I have create main layout and added buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="584dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -27,15 +26,14 @@
         android:id="@+id/btn10"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="584dp"
+        android:layout_marginTop="576dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +45,7 @@
         android:autoSizeTextType="uniform"
         android:backgroundTint="#5AB1F6"
         android:foregroundGravity="fill_horizontal|left|center_vertical"
-        android:text="Sunset"
+        android:text="@string/sunset"
         android:textAlignment="gravity"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -63,15 +61,14 @@
         android:id="@+id/btn2"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="192dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,15 +76,14 @@
         android:id="@+id/btn3"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="240dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,15 +91,14 @@
         android:id="@+id/btn4"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="288dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -111,15 +106,14 @@
         android:id="@+id/btn5"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="344dp"
+        android:layout_marginTop="336dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,15 +121,14 @@
         android:id="@+id/btn6"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="392dp"
+        android:layout_marginTop="384dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -143,15 +136,14 @@
         android:id="@+id/btn7"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="432dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -159,15 +151,14 @@
         android:id="@+id/btn8"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="488dp"
+        android:layout_marginTop="480dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -175,15 +166,14 @@
         android:id="@+id/btn9"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="536dp"
+        android:layout_marginTop="528dp"
         android:backgroundTint="#5AB1F6"
-        android:text="Sunset"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -193,7 +183,8 @@
         android:layout_width="59dp"
         android:layout_height="46dp"
         android:layout_marginBottom="24dp"
-        android:background="#3C3F41"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/todo"
         android:scaleType="centerCrop"
         android:tint="#5AB1F6"
         app:layout_constraintBottom_toBottomOf="parent"
