Added all pictures, Added all Activities, Changed names for buttons, Made code for buttons to open new activities.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,13 @@
         android:layout_height="50dp"
         android:layout_marginTop="576dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/stay_focused_and_balanced"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +46,7 @@
         android:autoSizeTextType="uniform"
         android:backgroundTint="#5AB1F6"
         android:foregroundGravity="fill_horizontal|left|center_vertical"
-        android:text="@string/sunset"
+        android:text="@string/delightful_morning"
         android:textAlignment="gravity"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -61,7 +62,7 @@
         android:id="@+id/btn2"
         android:layout_width="378dp"
         android:layout_height="50dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="188dp"
         android:backgroundTint="#5AB1F6"
         android:text="@string/paradise"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -69,7 +70,7 @@
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,6 +80,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="240dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/the_energy_of_the_forest"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -94,6 +96,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="288dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/sea_vibes"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -109,6 +112,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="336dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/power_of_ocean"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -124,6 +128,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="384dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/evening_calm"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -139,12 +144,13 @@
         android:layout_height="50dp"
         android:layout_marginTop="432dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/sounds_of_happiness"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -154,6 +160,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="480dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/find_yourself"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -169,6 +176,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="528dp"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/free_your_mind"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
