--- a/app/src/main/res/layout/activity_focused.xml
+++ b/app/src/main/res/layout/activity_focused.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Focused">
+    tools:context=".Focused"
+    android:background="@drawable/focused">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
