--- a/app/src/main/res/layout/activity_forest.xml
+++ b/app/src/main/res/layout/activity_forest.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Forest">
+    tools:context=".Forest"
+    android:background="@drawable/forest">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
