Changed the buttons style

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,94 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btn11"
+        android:id="@+id/btn"
         android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="584dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#5AB1F6"
+        android:text="@string/delightful_morning"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textColorHint="#DD2F2F"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="184dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/paradise"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="232dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/the_energy_of_the_forest"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/sea_vibes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="328dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/power_of_ocean"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="376dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/evening_calm"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
         android:textColorHint="#B12323"
@@ -23,142 +106,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn10"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="576dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/stay_focused_and_balanced"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:autoSizeTextType="uniform"
-        android:backgroundTint="#5AB1F6"
-        android:foregroundGravity="fill_horizontal|left|center_vertical"
-        android:text="@string/delightful_morning"
-        android:textAlignment="gravity"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#DD2F2F"
-        android:textSize="24sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn2"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="188dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/paradise"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="240dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/the_energy_of_the_forest"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn4"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="288dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/sea_vibes"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn5"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="336dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/power_of_ocean"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn6"
-        android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="384dp"
-        android:backgroundTint="#5AB1F6"
-        android:text="@string/evening_calm"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#0C185C"
-        android:textColorHint="#B12323"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btn7"
         android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="432dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="424dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#5AB1F6"
         android:text="@string/sounds_of_happiness"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
-        android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn8"
         android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="480dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="472dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#5AB1F6"
         android:text="@string/find_yourself"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -166,23 +134,39 @@
         android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn9"
         android:layout_width="378dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="528dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="520dp"
+        android:background="@drawable/button_style"
         android:backgroundTint="#5AB1F6"
         android:text="@string/free_your_mind"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
-        android:textColorHint="#B12323"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn10"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="568dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#5AB1F6"
+        android:text="@string/stay_focused_and_balanced"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#0C185C"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -191,14 +175,14 @@
         style="@android:style/Widget.DeviceDefault.ImageButton"
         android:layout_width="59dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="44dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
         android:scaleType="centerCrop"
         android:tint="#5AB1F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.89"
+        app:layout_constraintHorizontal_bias="0.897"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/conf" />
 
