--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,9 @@
         android:layout_height="40dp"
         android:layout_marginTop="136dp"
         android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
         android:text="@string/delightful_morning"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
-        android:textColorHint="#DD2F2F"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
@@ -29,8 +27,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="184dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button2_style"
         android:text="@string/paradise"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
