Changed the buttons style(Added to button gradient) Added Configuration image button and added new activity_configuration.xml

--- a/app/src/main/res/drawable/button6_style.xml
+++ b/app/src/main/res/drawable/button6_style.xml
@@ -5,7 +5,7 @@
     />
 
 <gradient android:angle="0"
-    android:startColor="#cdd633"
-    android:endColor="#33d1e7"
+    android:startColor="#4462ce"
+    android:endColor="#e16369"
     android:type="linear"/>
 </shape>
