--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="232dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button3_style"
         android:text="@string/the_energy_of_the_forest"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -58,8 +57,8 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="280dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button4_style"
+
         android:text="@string/sea_vibes"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -74,8 +73,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="328dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button5_style"
         android:text="@string/power_of_ocean"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -90,8 +88,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="376dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button6_style"
         android:text="@string/evening_calm"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -107,8 +104,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="424dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button7_style"
         android:text="@string/sounds_of_happiness"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -123,8 +119,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="472dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button8_style"
         android:text="@string/find_yourself"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -140,8 +135,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="520dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button9_style"
         android:text="@string/free_your_mind"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -156,8 +150,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:layout_marginTop="568dp"
-        android:background="@drawable/button_style"
-        android:backgroundTint="#5AB1F6"
+        android:background="@drawable/button10_style"
         android:text="@string/stay_focused_and_balanced"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#0C185C"
@@ -168,19 +161,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/ImBtn1"
-        style="@android:style/Widget.DeviceDefault.ImageButton"
-        android:layout_width="59dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="44dp"
+        android:id="@+id/imb1"
+        android:layout_width="68dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="32dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
-        android:scaleType="centerCrop"
-        android:tint="#5AB1F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
+        app:layout_constraintHorizontal_bias="0.912"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/conf" />
+        app:srcCompat="@drawable/settings" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
