Changed the buttons style(Added to button gradient) Added Configuration image button and added new activity_configuration.xml

--- a/app/src/main/res/drawable/button7_style.xml
+++ b/app/src/main/res/drawable/button7_style.xml
@@ -3,9 +3,8 @@
     <corners
         android:radius="120dp"
         />
-
     <gradient android:angle="0"
-        android:startColor="#11c51d"
+        android:startColor="#80bb18"
         android:endColor="#eeff63 "
         android:type="linear"/>
 </shape>
