--- a/app/src/main/res/layout/activity_morning.xml
+++ b/app/src/main/res/layout/activity_morning.xml
@@ -5,6 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Morning"
-    android:background="@drawable/morning">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:background="@drawable/morning"/>
