put music, pictures, change style for buttons, added spinner, created a countdown timer and so on.

--- a/app/src/main/res/layout/activity_morning.xml
+++ b/app/src/main/res/layout/activity_morning.xml
@@ -4,5 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Morning"
-    android:background="@drawable/morning"/>
+    android:background="@drawable/morning"
+    tools:context=".Morning">
+
+
+    <ImageButton
+        android:id="@+id/btnstart"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:background="@drawable/button_style"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/timer"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91"
+        app:srcCompat="@drawable/pause" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginEnd="4dp"
+        android:background="@android:color/transparent"
+        android:entries="@array/timer"
+        android:prompt="@string/spinnertitle"
+        android:spinnerMode="dialog"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toEndOf="@+id/btnstart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginEnd="92dp"
+        android:background="@drawable/button_style"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/timer"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btnstart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
+
+    <ImageButton
+        android:id="@+id/timer"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:background="@drawable/button_style"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnstart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91"
+        app:srcCompat="@drawable/timer" />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
