--- a/app/src/main/res/layout/activity_morning.xml
+++ b/app/src/main/res/layout/activity_morning.xml
@@ -44,6 +44,8 @@
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:layout_marginEnd="92dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:background="@drawable/button_style"
         android:gravity="center"
         android:textColor="#FFFFFF"
@@ -68,7 +70,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.91"
         app:srcCompat="@drawable/timer" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
