--- a/app/src/main/res/layout/spinnerdialog.xml
+++ b/app/src/main/res/layout/spinnerdialog.xml
@@ -3,16 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:theme="@android:style/Theme.Holo.Dialog"
+    android:theme="@android:style/Theme.Holo.Light"
     android:orientation="vertical">
-
     <!-- Theme.Holo.Dialog makes more beautiful UI for Dialog -->
 
     <Spinner
+
         android:id="@+id/spinner3"
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
+        android:backgroundTintMode="src_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/spinner2"
@@ -23,6 +24,7 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
+        android:scrollbarStyle="outsideInset"
         app:layout_constraintEnd_toStartOf="@+id/spinner3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +55,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/spinner3" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
